--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "devDependencies": {
     "vuepress": "^1.8.0",
-    "vuepress-theme-book": "0.0.5"
+    "vuepress-theme-book": "^0.0.9"
   }
 }
