--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npm run docs:build
+          NODE_OPTIONS=--openssl-legacy-provider npm run docs:build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.1
